fix Button name invisible

--- a/frontend/src/components/parts/Button/Button.module.scss
+++ b/frontend/src/components/parts/Button/Button.module.scss
@@ -147,7 +147,7 @@
     position: absolute;
   }
 
-  .loading {
+  .invisible {
     color: transparent;
   }
 }
